[gd_scene load_steps=8 format=3 uid="uid://tx5fc4vercbp"]

[ext_resource type="Script" path="res://wave_puzzle_spawner.gd" id="1_57vrt"]
[ext_resource type="Texture2D" uid="uid://bya08je88xilp" path="res://assets/wave_puzzle_sprite/wave_puzzle_spawner.png" id="1_lhban"]
[ext_resource type="PackedScene" uid="uid://b7ncio0pwxh4f" path="res://wave_puzzle.tscn" id="2_pwpmk"]
[ext_resource type="AudioStream" uid="uid://bm3gr2ws56ulo" path="res://assets/audio/fuel_invalid.wav" id="4_2o4tu"]
[ext_resource type="AudioStream" uid="uid://dups2irjrd1v7" path="res://assets/audio/fuel_valid.wav" id="5_uykvm"]
[ext_resource type="PackedScene" uid="uid://clao0g7w6s71g" path="res://sign.tscn" id="6_0xur5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_34ntf"]
size = Vector2(80, 80)

[node name="wave_puzzle_spawner" type="StaticBody2D" groups=["wave_puzzle_spawners"]]
collision_layer = 32
collision_mask = 32
script = ExtResource("1_57vrt")
wave_puzzle_scene = ExtResource("2_pwpmk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(5, 5)
texture = ExtResource("1_lhban")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_34ntf")

[node name="angryBar" type="ProgressBar" parent="."]
offset_left = -40.0
offset_top = 48.0
offset_right = 40.0
offset_bottom = 75.0

[node name="angryProgressTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="angryNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_2o4tu")
volume_db = 24.0

[node name="completedNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_uykvm")
volume_db = 24.0

[node name="warningSign" parent="." instance=ExtResource("6_0xur5")]
position = Vector2(0, -80)
scale = Vector2(5, 5)
animation = &"warning"
frame_progress = 0.310637

[connection signal="timeout" from="angryProgressTimer" to="." method="_on_angry_progress_timer_timeout"]
